--- a/typescript/package.json
+++ b/typescript/package.json
@@ -4,6 +4,7 @@
   "description": "my daily typescript training",
   "main": "main.ts",
   "scripts": {
+    "dev": "echo \"Running on port\" && exit 1",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc --build",
     "clean": "tsc --build --clean"
@@ -11,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^17.0.19",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
     "@typescript-eslint/parser": "^5.10.1",
     "eslint": "^7.32.0",
@@ -20,7 +22,6 @@
     "eslint-plugin-promise": "^5.2.0"
   },
   "dependencies": {
-    "@types/node": "^17.0.12",
     "fs": "^0.0.1-security"
   }
 }
