--- a/node_typescript/.gitignore
+++ b/node_typescript/.gitignore
@@ -5,8 +5,8 @@
 
 ### Node ###
 # Logs
-logs
-*.log
+# logs
+# *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
@@ -95,7 +95,7 @@ out
 
 # Nuxt.js build / generate output
 .nuxt
-dist
+# dist
 
 # Gatsby files
 .cache/
